--- a/2.html
+++ b/2.html
@@ -45,7 +45,7 @@
 
 <div class="layout">
     <div class="sidebar">
-        Blok boczny
+     <img src="obraz.jpg"> 
     </div>
 
     <div class="right-column">
@@ -58,3 +58,4 @@
 
 </body>
 </html>
+
