--- a/2.html
+++ b/2.html
@@ -45,7 +45,7 @@
 
 <div class="layout">
     <div class="sidebar">
-     <img src="obraz.jpg"> 
+     <img src="obraz.jpg" alt="obrazek"> 
     </div>
 
     <div class="right-column">
@@ -58,4 +58,5 @@
 
 </body>
 </html>
+
 
